--- a/myWeather/ionic.config.json
+++ b/myWeather/ionic.config.json
@@ -2,5 +2,11 @@
   "name": "myWeather",
   "app_id": "",
   "v2": true,
-  "typescript": true
+  "typescript": true,
+  "proxies": [
+    {
+      "path": "/search",
+      "proxyUrl": "http://autocomplete.wunderground.com"
+    }
+  ]
 }
